--- a/css/components/main-header.css
+++ b/css/components/main-header.css
@@ -3,10 +3,13 @@
     grid-template-columns: 3fr 1fr;
     height: 3.1875em;
     font-family: 'Roboto';
+
 }
+
 .logo{
     columns: 1;
 }
+
 .main-nav-list {
     columns: 2;
     display: flex;
@@ -15,4 +18,14 @@
     margin: 0;
     padding: 0;
     list-style-type: none;
+    color: #989898;
+
 } 
+.main-nav-list a {
+    color: inherit;
+    text-decoration: none;
+
+}
+.main-nav-list a:hover{
+    color:  #FF9826;
+}
