--- a/css/components/search.css
+++ b/css/components/search.css
@@ -5,5 +5,8 @@
     justify-content: center;
     border-radius: 18px;
     height: 2.625em;
-    width: 80%;
+    width: 98%;
+    margin-left: 10px;
+    margin-right: 10px;
+    border: 1px solid #E5E5E5;
 }
