--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,3 +8,4 @@
 /* COMPONENTS */
 @import url('./components/main-header.css');
 @import url('./components/search.css');
+@import url('/css/components/img-container.css');
