--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 /* @import url('./basics/base.css'); */
 
 /* COMPONENTS */
+@import url('./css/main.css');
 @import url('./components/main-header.css');
 @import url('./components/search.css');
 @import url('/css/components/img-container.css');
