--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,5 @@
 @import url('./components/main-header.css');
 @import url('./components/search.css');
 @import url('/css/components/img-container.css');
+@import url('/css/components/font-editor.css');
+@import url('/css/components/meme-editor.css');
