--- a/css/components/meme-editor.css
+++ b/css/components/meme-editor.css
@@ -5,7 +5,7 @@ body{
 }
 .editor-grid{
     display: grid;
-    grid-template-columns: minmax(auto,2fr) 23em;
+    grid-template-columns: minmax(auto,2fr) minmax(23em,auto);
     grid-template-rows: 30px 1fr ;
 }
 .back-gallery{
@@ -26,4 +26,17 @@ body{
 }
 .lines-switch-canvas p{
     margin-right: 10em;
+    font-size: 1.5em;
+}
+
+.edit-buttons{
+    width: 2.5em;
+    height: 1.875em;
+    text-align: center;
+    display: inline-block;
+    background-color: var(--clr-background);
+    border: 0px;
+}
+.edit-buttons:hover{
+    border-bottom: 1px solid  #FF9826;
 }
