--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,6 @@
 @import url('./css/main.css');
 @import url('./components/main-header.css');
 @import url('./components/input-text.css');
-@import url('/css/components/img-container.css');
-@import url('/css/components/font-editor.css');
-@import url('/css/components/meme-editor.css');
+@import url('./css/components/img-container.css');
+@import url('./css/components/font-editor.css');
+@import url('./css/components/meme-editor.css');
